﻿shmuel 06.02.2015 17:07:16 +0200 - build 481

1. Уточнение build 476: после вызова Plugin.Call и завершения макроса не производилась перерисовка редактора.

shmuel 03.02.2015 01:48:32 +0200 - build 480

1. LuaFAR: добавлена функция far.FarClock. Документация следует.

shmuel 28.01.2015 22:30:52 +0200 - build 479

1. LuaFAR: x64 warnings.

shmuel 28.01.2015 19:19:30 +0200 - build 478

1. LuaFAR: добавлена функция win.system.

shmuel 21.01.2015 23:59:12 +0200 - build 477

1. Рефакторинг.

shmuel 21.01.2015 16:51:11 +0200 - build 476

1. Рефакторинг.

zg 20.01.2015 03:10:50 +0200 - build 475

1. 0002912: В диалогах DM_SETTEXT, DM_GETTEXT не позволяют работать со строками содержащими '\0'.

shmuel 17.01.2015 23:05:52 +0200 - build 474

1. Рефакторинг.

shmuel 15.01.2015 16:59:48 +0200 - build 473

1. LuaFAR: исправлены два бага в библиотеке bit64.

shmuel 14.01.2015 00:19:06 +0200 - build 472

1. Рефакторинг.

shmuel 13.01.2015 19:29:57 +0200 - build 471

1. Рефакторинг, уточнения.

shmuel 12.01.2015 20:52:17 +0200 - build 470

1. Уточнение 465.1.

2. Уточнение 469.

3. Рефакторинг.

shmuel 11.01.2015 19:58:26 +0200 - build 469

1. Рефакторинг.

shmuel 07.01.2015 10:26:06 +0200 - build 468

1. LuaFAR: добавлена функция win.OutputDebugString.

shmuel 06.01.2015 23:42:23 +0200 - build 467

1. Уточнение 465.1.

shmuel 06.01.2015 18:27:55 +0200 - build 466

1. Уточнение 465.1.

shmuel 03.01.2015 21:20:32 +0200 - build 465

1. eval(S,2) снова, как это было до перевода макросистемы на Lua, запускает на исполнение
   соответствующий макрос, а не просто вызывает его функцию 'action'.

2. Рефакторинг.

shmuel 01.01.2015 20:34:10 +0200 - build 464

1. Рефакторинг.

shmuel 31.12.2014 00:11:10 +0200 - build 463

1. Far.DisableHistory(-1) не запрещал добавления в историю при последующих вызовах Panel.SetPath().

2. Рефакторинг.

shmuel 26.12.2014 19:26:13 +0200 - build 462

1. Рефакторинг: прекращено использование фаровских регулярных выражений для внутренних нужд плагина.
