@@ -1,4 +1,12 @@
-﻿shmuel 06.02.2015 17:07:16 +0200 - build 481
+﻿shmuel 08.02.2015 17:47:16 +0200 - build 482
+
+1. LuaFAR (generic plugin):
+   Размер структур PluginStartupInfo и FarStandardFunctions определяется теперь не при компиляции,
+   а динамически, по значениям полей StructSize в аргументе, полученном от Far в SetStartupInfoW().
+   Это позволит LuaFAR-плагинам автоматически поддерживать добавляемые функции Plugins API без
+   необходимости перекомпиляции плагина.
+
+shmuel 06.02.2015 17:07:16 +0200 - build 481
 
 1. Уточнение build 476: после вызова Plugin.Call и завершения макроса не производилась перерисовка редактора.
 
